# chess_en_bench

./: .gitignore  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: .gitignore
bench/ceb/: __init__.py  agent_trajectory.py  cli.py  config.py  eval_pack.py  paths.py  sanitize.py
bench/ceb/api/: __init__.py  main.py
bench/ceb/chess/: __init__.py  board.py  fen.py  move.py  movegen.py  perft.py  pgn.py
bench/ceb/gate/: __init__.py  gate_runner.py  reports.py
bench/ceb/hosted/: __init__.py  build_wrappers.py  db.py  eval_pack_trust.py  metadata.py  models.py  official_eval.py  profiles.py  readiness.py  release_checklist.py  release_manifest.py  result_bundle.py  signing.py  submissions.py  track_b_eval.py  upload.py  verifier.py  worker.py
bench/ceb/jail/: __init__.py  docker_engine.py  engine_jail.py
bench/ceb/match/: __init__.py  fastchess_runner.py  internal_runner.py  openings.py  opponents.py
bench/ceb/rounds/: __init__.py  feedback.py  round_runner.py  state.py
bench/ceb/sandbox/: __init__.py  docker_runner.py
bench/ceb/scan/: __init__.py  leak_scan.py  (+2 more)
docs/: DECISIONS.md  EVAL_PACKS.md  HANDOFF.md  HOSTED_ARCHITECTURE.md  HOSTED_OPERATIONS.md  LEADERBOARD_GOVERNANCE.md  RELEASE_NOTES.md  RESULT_SIGNING.md  SECURITY_MODEL.md  TRACK_B_OFFICIAL_PIPELINE.md  agent_protocol.md  benchmark_protocol.md  leaderboard_policy.md  licensing.md  overview.md  reproducibility.md  scoring.md  security.md  track_a_from_scratch.md  track_b_stockfish_optimization.md
infra/docker/: engine_jail.Dockerfile  evaluator.Dockerfile  track_b_build_jail.Dockerfile
runs/: .gitignore
scripts/: build_evaluator_image.sh  build_jail_image.sh  build_track_b_build_image.sh  public_official_smoke.sh  run_public_gate.sh  setup_dev.sh  setup_stockfish.sh
specs/: forbidden_behaviors.md  round_feedback_contract.md  submission_contract.md  uci_extension_perft.md  uci_minimal.md
tests/: conftest.py  test_agent_trajectory.py  test_artifact_visibility.py  test_cli_smoke.py  test_draw_adjudication.py  test_engine_jail.py  test_eval_modes.py  test_eval_pack.py  test_eval_pack_trust.py  test_fen.py  test_gate.py  test_hosted.py  test_leaderboard.py  test_movegen_perft.py  test_openings.py  test_readiness.py  test_release_manifest.py  test_run_id_inference.py  test_sandbox_docker.py  test_sanitization.py  test_scan.py  test_scoring.py  test_signing.py  test_strict_gate.py  test_track_b_official.py  test_track_b_round.py  test_uci_client.py  test_upload.py
tracks/a_from_scratch/: eval_profiles.yaml  prompt.md  scoring.yaml  track.yaml
tracks/b_stockfish_opt/: allowed_paths.txt  forbidden_paths.txt  patch_policy.yaml  prompt.md  track.yaml
web/static/: app.js  index.html  styles.css
(+40 files in other folders)
