[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-en-bench"
version = "0.3.5"
description = "Benchmark platform for LLM coding agents that build or optimize chess engines"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "junyeopYim" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.24"]
server = ["fastapi>=0.110", "uvicorn>=0.27"]
# Hosted official evaluation. SQLite + stdlib hashlib/hmac are built in, so
# the default backend needs nothing extra; this extra pulls the server stack
# used by the hosted API endpoints plus `cryptography` for Ed25519 public-key
# result signing (legacy HMAC works without it).
hosted = ["fastapi>=0.110", "uvicorn>=0.27", "cryptography>=42"]

[project.scripts]
ceb = "ceb.cli:main"

[project.urls]
Homepage = "https://github.com/junyeopYim/chess_en_bench"

[tool.setuptools.packages.find]
where = ["bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
